AAT Lists added + new Logs Viewer

--- a/usr/share/aat/THEMES/DEFAULT/style.css
+++ b/usr/share/aat/THEMES/DEFAULT/style.css
@@ -37,7 +37,7 @@ tr.box {
 }
 
 tr.boxcolor1 {
-  background-color: #E7E7E7;
+  background-color: #D9D9D9;
   font-family: Geneva, Verdana, Arial, sans-serif;
   font-size: 12px;
   padding: 1px;
