--- a/templates/menu_top.tt
+++ b/templates/menu_top.tt
@@ -1,13 +1,13 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
-        <a class="navbar-brand" href="/">Octopussy</a>
+        <a class="navbar-brand" href="/">Octopussy [% config.octopussy_version %]</a>
 		<div class="navbar-collapse collapse">
 		<ul class="nav navbar-nav">
 		</ul>
         <ul class="nav pull-right">
         	<li id="fat-menu" class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          	<i class="fa fa-user"></i> [% session.user %]<span class="fa fa-caret-down"></span></a>
+          	<i class="fa fa-user"></i> [% c.session.user_login %] <span class="fa fa-caret-down"></span></a>
       	<ul class="dropdown-menu dropdown-menu-right" role="menu">
         	<li><a href="/user/preferences"><i class="fa fa-wrench"></i> [% c.l('_USER_PREFS') %]</a></li>
            	<li class="divider"></li>
