--- a/templates/user/login.html.tt
+++ b/templates/user/login.html.tt
@@ -6,13 +6,17 @@
 <form method='POST' action='/user/login' class="form-horizontal">
 <fieldset>
     <legend>Octopussy [% config.octopussy_version %] Login</legend>
-        <div class="control-group">
-            <div class="input-prepend"><span class="add-on"><i class="fa fa-user"></i></span>
-            <input name="login" id="login" type="text" class="input-medium" placeholder="login" value="[% login %]"></div>
+        <div class="form-group">
+			<label for="login" class="col-lg-2 control-label">Login</label>
+			<div class="col-lg-4">
+            <input name="login" id="login" type="text" class="form-control" placeholder="login" value="[% login %]">
+			</div>
         </div>
-        <div class="control-group">
-            <div class="input-prepend"><span class="add-on"><i class="fa fa-key"></i></span>
-            <input name="password" id="password" type="password" class="input-medium" placeholder="password" value="[% password %]"></div>
+        <div class="form-group">
+			<label for="password" class="col-lg-2 control-label">Password</label>
+			<div class="col-lg-4">
+            <input name="password" id="password" type="password" class="form-control" placeholder="password" value="[% password %]">
+			</div>
         </div>
     <div><hr></div> 
     <div align="center">
